bk_ida/gccida/c1/binary_op_error
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/binary_op_error/src/c-common.c:2041:24: error: must use 'enum' tag to refer to type 'tree_code'
void  binary_op_error( tree_code code) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/binary_op_error/src/c-common.c:2065:6: error: use of undeclared identifier 'off_63B09B'
v1 = off_63B09B; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/binary_op_error/src/obj/c-common.o] Error 1
